Added video source from api

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -119,32 +119,32 @@
     </div>
     <div class="container">
       
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="bu8Gtbljw4E" data-toggle="modal" data-target="#trailer">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="40hHA9n4C2o" data-toggle="modal" data-target="#trailer">
     <img src="http://cf2.imgobject.com/t/p/original/eSivb4EyOAyEum70mOSHtAWiUe3.jpg" width="220" height="342">
     <h2>The Devil's Advocate</h2>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="bu8Gtbljw4E" data-toggle="modal" data-target="#trailer">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="Jvurpf91omw" data-toggle="modal" data-target="#trailer">
     <img src="http://cf2.imgobject.com/t/p/original/qmDpIHrmpJINaRKAfWQfftjCdyi.jpg" width="220" height="342">
     <h2>Inception</h2>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="bu8Gtbljw4E" data-toggle="modal" data-target="#trailer">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="Ku9jE6eNfBM" data-toggle="modal" data-target="#trailer">
     <img src="http://cf2.imgobject.com/t/p/original/dvKvkoc2d06cOSheq5hQ7G4FJJX.jpg" width="220" height="342">
     <h2>Alfie</h2>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="bu8Gtbljw4E" data-toggle="modal" data-target="#trailer">
-    <img src="http://cf2.imgobject.com/t/p/original/reaYd8JUX4V8t6rmCvpU4iQrgxM.jpg" width="220" height="342">
-    <h2>Everything's Gone Green</h2>
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="cpkN0JdXRpM" data-toggle="modal" data-target="#trailer">
+    <img src="http://cf2.imgobject.com/t/p/original/eEdXRImgDyCdeYdz3jnJxqovC2k.jpg" width="220" height="342">
+    <h2>Temple Grandin</h2>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="bu8Gtbljw4E" data-toggle="modal" data-target="#trailer">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="hk3Bzss8hYI" data-toggle="modal" data-target="#trailer">
     <img src="http://cf2.imgobject.com/t/p/original/mhB7C62lSMpGO2HYNaW6d7W3TVH.jpg" width="220" height="342">
     <h2>American Hustle</h2>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="bu8Gtbljw4E" data-toggle="modal" data-target="#trailer">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="aStYWD25fAQ" data-toggle="modal" data-target="#trailer">
     <img src="http://cf2.imgobject.com/t/p/original/bxVxZb5O9OxCO0oRUNdCnpy9NST.jpg" width="220" height="342">
     <h2>Lord of The Rings</h2>
 </div>
