added modernizer.js and cleaned code

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -11,6 +11,7 @@
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
     <style type="text/css" media="screen">
         body {
             padding-top: 80px;
@@ -147,6 +148,21 @@
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="aStYWD25fAQ" data-toggle="modal" data-target="#trailer">
     <img src="http://cf2.imgobject.com/t/p/original/bxVxZb5O9OxCO0oRUNdCnpy9NST.jpg" width="220" height="342">
     <h2>Lord of The Rings</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="Z1mcQ6CzXo8" data-toggle="modal" data-target="#trailer">
+    <img src="http://cf2.imgobject.com/t/p/original/fJAvGOitU8y53ByeHnM4avtKFaG.jpg" width="220" height="342">
+    <h2>Death Note</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="neY2xVmOfUM" data-toggle="modal" data-target="#trailer">
+    <img src="http://cf2.imgobject.com/t/p/original/dr6x4GyyegBWtinPBzipY02J2lV.jpg" width="220" height="342">
+    <h2>Batman Begins</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="5KNvRccCgME" data-toggle="modal" data-target="#trailer">
+    <img src="http://cf2.imgobject.com/t/p/original/gdiLTof3rbPDAmPaCf4g6op46bj.jpg" width="220" height="342">
+    <h2>Gone Girl</h2>
 </div>
 
     </div>
